--- a/project/src/pug/pages/index.pug
+++ b/project/src/pug/pages/index.pug
@@ -9,27 +9,32 @@ html(lang="en")
     body
         header.header
             .header--social
-                a(href="#" class="header--social--link")
-                a(href="#" class="header--social--link")
                 a(href="#" class="header--social--link") 
+                    img(src="img/instagram.jpg", alt="instagramm")
+                a(href="#" class="header--social--link")
+                    img(src="img/twitter.jpg", alt="twitter")
+                a(href="#" class="header--social--link") 
+                    img(src="img/facebook.jpg", alt="facebook")
             h1.header--title Hipsum Blog
-            .heder--buttons
+            .header--buttons
                 a(href="#" class="header--buttons--item")
-                a(href="#" class="header--buttons--item")
+                    img(src="img/search.jpg", alt="search")
+                a(href="#" class="header--buttons--link") SUBSCRIBE
+        .header--line
         main
             article.text
                 h1.text--title Gastropub ennui keytar, plaid meggings marfa edison bulb pour-over austin enamel pin.
                 p.text--subtitle NOVEMBER 28, 2019 — 12 COMMENTS
                 .text--img
-                .text--text Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut maxime expedita assumenda dicta tempora ipsa itaque. Officia veritatis odio facilis recusandae cum amet totam vitae! Cumque libero voluptatibus vel odio aliquam praesentium doloribus architecto nesciunt perferendis, ipsam eos in! Ex, eius illum, eos nam quam nemo doloremque, animi sint consequatur laborum nesciunt. Aliquid asperiores veritatis odio, inventore architecto ipsum accusantium esse ex minus, suscipit sed! Odit accusamus maxime officiis doloremque illum quod, perspiciatis amet numquam? Fuga consectetur delectus autem repudiandae beatae, suscipit numquam mollitia commodi debitis atque magnam consequatur sit repellat esse quo modi. Blanditiis veritatis distinctio a sequi at.
+                .text--text Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, tenetur officiis? Veritatis corrupti labore quod doloribus expedita ipsam adipisci, asperiores iste nisi neque? <br>Quae, quos voluptate quidem, omnis ipsam dolorum architecto soluta nisi recusandae beatae amet facere ex tempora expedita odit dolorem quam quia nesciunt reiciendis. Veniam qui laboriosam odit pariatur cum vel ipsum similique asperiores, laudantium omnis nobis eos iusto quasi atque, totam odio voluptas saepe deserunt? Nobis, reiciendis deserunt ab distinctio, ipsum ad tenetur ducimus dolor sint quibusdam quod, repudiandae inventore hic soluta quasi laudantium ex! Repellendus quisquam maxime minima quod, assumenda sequi voluptate! Officiis, adipisci? Amet maiores quam maxime porro, numquam, minima odit beatae cupiditate expedita ducimus corrupti dicta atque?<br> Consectetur delectus pariatur recusandae aliquam cum voluptate, voluptatem, mollitia quos rem error dicta nobis, facere fugiat hic blanditiis quo in nihil similique laborum tenetur fuga? Vel temporibus velit veritatis commodi incidunt ullam, nostrum cumque eveniet quis doloremque neque adipisci inventore veniam perferendis iste ducimus. Accusamus quia architecto explicabo quos repudiandae. Eligendi reprehenderit ab expedita aliquam nihil nobis sunt illum nostrum facilis hic ex ut itaque, harum facere, quo quasi delectus repudiandae cumque quaerat nemo nulla atque et incidunt! Porro reprehenderit doloremque excepturi vero earum fugiat neque praesentium. Quo temporibus ut dicta officia iste consequatur architecto commodi qui vitae adipisci consectetur soluta aut perferendis est, nesciunt voluptate quas iure eos dolore suscipit laborum blanditiis asperiores? <br>Ullam laboriosam odit temporibus modi quae dolorem tempore vitae neque repudiandae non! Iste dolorem in quidem perspiciatis ducimus unde quos, quam voluptatibus rem optio, numquam excepturi eius non veniam aspernatur dolores recusandae ullam aut, similique necessitatibus error repudiandae quia eos esse! Facere neque commodi doloribus recusandae distinctio quis facilis, quam assumenda maxime, a, necessitatibus voluptates eum autem quas consequuntur! Ex fugiat atque iure eius repudiandae esse commodi nemo architecto, eveniet quis debitis velit ipsam quibusdam sunt aspernatur quaerat natus qui inventore quas assumenda maxime. Nam reiciendis blanditiis praesentium natus, quisquam optio! Quisquam deserunt in, doloremque repellat nisi eveniet ipsa odit blanditiis amet, earum quasi est assumenda quibusdam quod dolorum sit nam placeat, reiciendis libero. <br> Assumenda vel commodi impedit unde culpa consectetur ullam cupiditate maiores illo hic officiis repellendus laboriosam iure delectus voluptatem saepe deleniti rem eos nulla est, nemo, nesciunt debitis? Vero, voluptatibus ullam dolore dignissimos qui esse, repellendus enim, deleniti dolorem ratione corporis. Recusandae vero quas voluptatem laudantium porro eum maiores repellat animi nesciunt harum. Exercitationem aliquam, vitae quasi veniam nobis quod minus expedita debitis inventore ex voluptatibus, pariatur earum! <br>Odio modi possimus officia autem ipsam deserunt, vel optio, assumenda sapiente minima accusantium. Repudiandae odit quibusdam modi laudantium culpa quisquam aperiam vitae, nisi quos illum distinctio alias quidem iusto, maiores sit ea unde dolores possimus pariatur ullam mollitia. Voluptatem nam, perferendis, cum aliquam sapiente quasi sint quos commodi officiis dolor obcaecati quas? Ipsum placeat delectus id deleniti, quam cupiditate, dolores accusantium molestiae tempora enim voluptatum tenetur incidunt, laboriosam ea porro. Sit, dolores neque corrupti minima omnis deserunt modi rem. Ea obcaecati exercitationem dolorem voluptatem nobis esse harum sunt, atque quos est perspiciatis.
             article.comment
                 h2.comment--title Comment it:
-                input( class="comment--text" type='text')
+                input( class="comment--text" type='text-area')
                 .comment--items
-                    input(type="text")
-                    input(type="text")
-                    input(type="text")
-                a(class="comment--link" href="#")
+                    input(class="comment--items--name" type="text"  placeholder="Your name")
+                    input(class="comment--items--email" type="text" placeholder="Email")
+                    input(class="comment--items--homepage" type="text" placeholder="Homepage")
+                a(class="comment--link" href="#") COMMENT
             article.other-comments
                 .other-comments--item
                     p.other-comments--item--name Nina Ricci
@@ -61,6 +66,8 @@ html(lang="en")
                 a(href="#") T
                 a(href="#") F
         p.copyright © Copyright 2019. All rights reserved.
+
+    script(src="https://kit.fontawesome.com/7f4db95764.js" crossorigin="anonymous")
                 
 
                 
