--- a/BlogMainPage/src/pug/sections/recent-posts.pug
+++ b/BlogMainPage/src/pug/sections/recent-posts.pug
@@ -1,20 +1,13 @@
-.widget
-    .widget__title Recent posts
++widget("Recent posts")
 
-    .post-widget
-        .post-widget__img 
-            img(src="./img/small-thumbs/01.jpg", alt="")
-        .post-widget__title Austin DIY sriracha polaroid sartorial la croix. 
-        .post-widget__info DECEMBER 26, 2019 — 5 COMMENTS
+    +post-widget("Austin DIY sriracha polaroid sartorial la croix.", "DECEMBER 26, 2019 — 5 COMMENTS", "01.jpg")
 
-    .post-widget
-        .post-widget__img 
-            img(src="./img/small-thumbs/02.jpg", alt="")
-        .post-widget__title Austin DIY sriracha polaroid sartorial la croix. 
-        .post-widget__info DECEMBER 26, 2019 — 5 COMMENTS
+    +post-widget("Vinyl hexagon tbh selvage chambray street art. ", "DECEMBER 12, 2019 — 0 COMMENTS", "02.jpg")
 
-    .post-widget
-        .post-widget__img 
-            img(src="./img/small-thumbs/03.jpg", alt="")
-        .post-widget__title Austin DIY sriracha polaroid sartorial la croix. 
-        .post-widget__info DECEMBER 26, 2019 — 5 COMMENTS
+    +post-widget("Edison bulb raw denim 3 wolf moon shaman mustache taxidermy. Cliche disrupt slow-carb chicharrones.", "DECEMBER 08, 2019 — 2 COMMENTS", "03.jpg")
+
+    +post-widget("Gastropub ennui keytar, plaid meggings marfa edison bulb pour-over austin enamel pin.", "NOVEMBER 28, 2019 — 12 COMMENTS", "04.jpg")
+
+    +post-widget("Minim ad austin tousled gluten-free.", "NOVEMBER 17, 2019 — 22 COMMENTS", "05.jpg")
+
+    
