--- a/BlogMainPage/src/scss/blocks/_post-widget.scss
+++ b/BlogMainPage/src/scss/blocks/_post-widget.scss
@@ -16,12 +16,22 @@
 }
 
 .post-widget__title {
+    margin: 0;
     bottom: 25px;
     color: #1a1a1a;
     font-family: "Playfair Display", serif;
     font-size: 18px;
     font-weight: 400;
     text-align: center;
+
+    a {
+        color: #1a1a1a;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .post-widget__info {
