--- a/BlogMainPage/src/pug/pages/index.pug
+++ b/BlogMainPage/src/pug/pages/index.pug
@@ -34,3 +34,4 @@ block content
 
             .col-3 
                 include ./../sections/recent-posts.pug
+                include ./../sections/popular-posts.pug
