--- a/BlogMainPage/src/scss/blocks/_post-widget.scss
+++ b/BlogMainPage/src/scss/blocks/_post-widget.scss
@@ -1,6 +1,9 @@
 .post-widget {
     padding: 40px 0;
-    border-bottom: solid 1px #dde2e7;
+
+    &:not(:last-child) {
+        border-bottom: solid 1px #dde2e7;
+    }
 }
 
 .post-widget__img {
