--- a/BlogMainPage/src/scss/main.scss
+++ b/BlogMainPage/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./blocks/pagination";
 @import "./blocks/widget";
 @import "./blocks/post-widget";
+@import "./blocks/widget-instagram";
 
 
 
