--- a/BlogMainPage/src/pug/pages/index.pug
+++ b/BlogMainPage/src/pug/pages/index.pug
@@ -36,3 +36,5 @@ block content
                 include ./../sections/recent-posts.pug
                 include ./../sections/popular-posts.pug
                 include ./../sections/widget-instagram.pug
+
+    include ./../sections/footer.pug
