--- a/BlogMainPage/src/scss/main.scss
+++ b/BlogMainPage/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import "./blocks/widget-instagram";
 @import "./blocks/footer";
 @import "./blocks/copyright";
+@import "./blocks/footer-nav";
 
 
 
