--- a/howTo/Dog Registry/style.css
+++ b/howTo/Dog Registry/style.css
@@ -4,6 +4,7 @@
 * {
     margin: 0;
     padding: 0; 
+    font-family: 'Lora', serif;  ;
 }
 
 a {
@@ -73,6 +74,47 @@ a.nav__item:hover {
     width: 97px;
     height: 40px;
     color: #ffffff;
+}
+
+.header__wrapper {
+    display: flex;
+}
+
+.header__img {
+    width: 600px;
+}
+
+.header__title {
+    font-size: 60px;
+    line-height: 77px;
+    margin-top: 200px;
+    margin-left: 103px;
+}
+
+.header__subtitle {
+    font-size: 18px;
+    line-height: 23px;
+    margin-top: 16px;
+    margin-left: 103px;
+}
+
+.header__button {
+    margin-top: 24px;
+    margin-left: 103px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    background-color: #3C5FAC;
+    border-radius: 94px;
+    width: 160px;
+    height: 56px;
+    color: #ffffff;
+}
+
+.header__img {
+    margin-top: 73px;
+    margin-left: 94px;
+
 }
 
 
