--- a/howTo/DogRegistry/style.css
+++ b/howTo/DogRegistry/style.css
@@ -158,6 +158,71 @@ a.nav__item:hover {
     font-size: 18px;
 }
 
+/*works*/
+
+.work {
+    background-color:  #3C5FAC;
+    padding-bottom: 128px;
+}
+
+.work__title {
+    padding-top: 128px;
+    font-size: 36px;
+    line-height: 46px;
+    font-weight: 600;
+    color: #ffffff;
+    text-align: center;
+}
+
+.work__subtitle {
+    padding-top: 16px;
+    font-size: 18px;
+    line-height: 23px;
+    color: #ffffff;
+    text-align: center;
+}
+
+.work__wrapper {
+    display: flex;
+    justify-content: space-around;
+}
+
+.work__description {
+    font-size: 18px;
+    line-height: 23px;
+    color: #ffffff;
+}
+
+.work__text {
+    font-size: 16px;
+    line-height: 20px;
+    opacity: 0.8;
+    color: #ffffff;
+    width: 256px;
+    text-align: center;
+}
+
+.work__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.work__item:nth-child(2) {
+    margin-top: 70px;
+}
+
+.work__line {
+    position: absolute;
+    top: 1670px;
+    left: 650px;
+}
+
+.work__line2 {
+    position: absolute;
+    top: 1750px;
+    left: 1100px;
+}
 
 
 
