--- a/howTo/DogRegistry/style.css
+++ b/howTo/DogRegistry/style.css
@@ -456,6 +456,58 @@ a.nav__item:hover {
    padding-bottom: 100px;
 }
 
+/*understand*/
+
+.understand__title {
+    margin-top: 123px;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 46px;
+    text-align: center;
+}
+
+.understand__text {
+    margin-top: 16px;
+    font-size: 18px;
+    line-height: 23px;
+    text-align: center;
+}
+
+.understand__items {
+    display: flex;
+    justify-content: space-around;
+}
+
+.understand__item {
+    width: 560px;
+    margin-top: 60px;
+}
+
+.understand__header {
+    background-color: #3C5FAC;
+    height: 136px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.understand__name {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 31px;
+    color: #FFFFFF;
+    margin-left: 35px;
+}
+
+.understand__big-text {
+    height: 150px;
+    font-size: 18px;
+    line-height: 23px;
+    padding: 32px 40px;
+    border: 1px solid #CFD8DC;
+    margin-bottom: 128px;
+}
+
 
 
 
