--- a/howTo/page/minto/style.css
+++ b/howTo/page/minto/style.css
@@ -148,5 +148,160 @@ article img {
     font-family: fontawesome;
     padding-left: 10px;
 }
+footer {
+    background: #82699d;
+    height: 50px;
+}
+footer > p {
+    font-size: 18px;
+    color: #ffffff;
+    text-align: center;
+    padding-top: 10px;
+}
 
+/*Hamburger*/
+
+
+.ham {
+    display: none;
+    position: absolute;
+    /* always keep ham on top of everything */
+    z-index: 1000;
+    top: 20px;
+    right: 20px;
+    width: 36px;
+    height: 36px;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    background-image: url("https://ljc-dev.github.io/testing0/ham.svg");
+    background-size: 100%;
+  }
+  
+  
+  /* change ham image to close */
+  .showClose {
+    background-image: url("https://ljc-dev.github.io/testing0/ham-close.svg");
+  }
+  
+  .navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: black;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    color: white;
+    /* hide the menu above the screen by default */
+    transform: translateY(-100%);
+    /* transition adds a little animation when sliding in and out the menu */
+    transition: transform 0.2s ease;
+  }
+  
+  
+  .showNav {
+    /* show the menu */
+    transform: translateY(0);
+  }
+  
+  /* basic nav styling below */
+  
+  .navbar ul {
+    width: 100%;
+    height: 100%;
+    list-style: none;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
+  .navbar ul li a {
+    color: white;
+    padding-bottom: 10px;
+    border-bottom: 2px solid black;
+    text-decoration: none;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2rem;
+  }
+  
+  .navbar ul li a:hover, .navbar ul li a:focus {
+    border-bottom: 2px solid white;
+  }
+
+
+
+
+
+/*Responsive*/
+
+@media screen and (max-width: 1200px) {
+    .wrapper {
+        width: 980px;
+    }
+    .logo-text {
+        margin-right: 200px;
+    }
+    .linkForArticle {
+        padding-left: 850px;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .wrapper {
+        width: 750px;
+    }
+    nav {
+        display: none;
+    }
+    .ham {
+        display: block;
+    }
+    .linkForArticle {
+        padding-left: 650px;
+    }
+    
+}
+
+@media screen and (max-width: 767px) {
+    .wrapper {
+        width: 530px;
+    }
+    .linkForArticle {
+        padding-left: 430px;
+    }
+}
+
+@media screen and (max-width: 565px) {
+    .wrapper {
+        width: 100%;
+    }
+    article {
+        flex-direction: column;
+        padding: 0 10px;
+
+    }
+    article > .article__text {
+        padding-left: 0;
+    }
+    .linkForArticle {
+        padding-left: 10px;
+    }
+    .article__img {
+        text-align: center;
+    }
+    .article__text__title {
+        text-align: center;
+    }
+    .logo-text {
+        margin-right: 0;
+    }
+    .text1 {
+        font-size: 80px;
+    }
+    .text2 {
+        font-size: 20px;
+    }
+}
 
