--- a/howTo/page/minto/style.css
+++ b/howTo/page/minto/style.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body {
     font-family: 'Muli', sans-serif;
     font-size: 10px;
@@ -16,62 +21,51 @@ a {
 
 /*стилизация навигации*/
 
-.logo {
-    font-size: 2.8rem;
-    height: 70px;
-    width: 70px;
-    display: inline-block;
-    background-image: url(img/logo.png);
-    background-repeat: no-repeat;
-}
-
-.logo span {
-    margin-left: 15px;
-    color: white;
-}
-
-.logo-text {
-    display: inline-block;
-    font-size: 3.9em;
-    color: #a292b3;
-    margin-left: 13px;
-    margin-right: 208px;
-}
-
 nav {
-    display: inline-block;
+    position: sticky;
+    top: 0px;
+    height: 80px;
+    width: 100%;
+    background: #34495e;
 }
-
-nav a {
-    font-size: 19px;
-    color: #545454;
-    line-height: 1.2;
+label.logo {
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+    padding: 0 100px;
+    line-height: 80px;
+}
+nav ul {
+    float: right;
     margin-right: 40px;
 }
-
-.nav-home:before {
-    content: '\f015';
-    font-family: fontawesome;
-    margin-right: 8px;
+nav li {
+    display: inline-block;
+    margin: 0 8px;
+    line-height: 80px;
+}
+nav a{
+    color: white;
+    font-size: 18px;
+    text-decoration:uppercase;
+    border: 1px solid transparent;
+    padding: 7px 10px;
+    border-radius: 3px;
+}
+a.active,a:hover{
+    border: 1px solid white;
+    transition: .5s;
+}
+nav #icon{
+    color: white;
+    font-size: 30px;
+    line-height: 80px;
+    float: right;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none; 
 }
 
-.nav-about:before {
-    content:'\f406';
-    font-family: fontawesome;
-    margin-right: 8px;
-}
-
-.services:before {
-    content: '\f085';
-    font-family: fontawesome;
-    margin-right: 8px;
-}
-
-.contact:before {
-    content: '\f0e0';
-    font-family: fontawesome;
-    margin-right: 8px;
-}
 
 /*стилизация хедера*/
 header {
@@ -159,76 +153,7 @@ footer > p {
     padding-top: 10px;
 }
 
-/*Hamburger*/
 
-
-.ham {
-    display: none;
-    position: absolute;
-    /* always keep ham on top of everything */
-    z-index: 1000;
-    top: 20px;
-    right: 20px;
-    width: 36px;
-    height: 36px;
-    border: none;
-    cursor: pointer;
-    background-color: transparent;
-    background-image: url("https://ljc-dev.github.io/testing0/ham.svg");
-    background-size: 100%;
-  }
-  
-  
-  /* change ham image to close */
-  .showClose {
-    background-image: url("https://ljc-dev.github.io/testing0/ham-close.svg");
-  }
-  
-  .navbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: black;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    color: white;
-    /* hide the menu above the screen by default */
-    transform: translateY(-100%);
-    /* transition adds a little animation when sliding in and out the menu */
-    transition: transform 0.2s ease;
-  }
-  
-  
-  .showNav {
-    /* show the menu */
-    transform: translateY(0);
-  }
-  
-  /* basic nav styling below */
-  
-  .navbar ul {
-    width: 100%;
-    height: 100%;
-    list-style: none;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  
-  .navbar ul li a {
-    color: white;
-    padding-bottom: 10px;
-    border-bottom: 2px solid black;
-    text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.2rem;
-  }
-  
-  .navbar ul li a:hover, .navbar ul li a:focus {
-    border-bottom: 2px solid white;
-  }
 
 
 
@@ -246,17 +171,49 @@ footer > p {
     .linkForArticle {
         padding-left: 850px;
     }
+    label.logo{
+        font-size: 32px;
+        padding-left: 25px;
+    }
+    nav ul{
+        margin-right: 20px;
+    }
+    nav a{
+        font-size: 17px;
+    }
 }
 
 @media screen and (max-width: 991px) {
     .wrapper {
-        width: 750px;
+        width: 100%;
     }
-    nav {
-        display: none;
-    }
-    .ham {
+    nav #icon{
         display: block;
+    }
+    nav ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2f3640;
+        top: 70px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav a{
+        font-size: 20px;
+    }
+    a.active,a:hover{
+        border: none;
+        color: #3498db;
+    }
+    nav ul.show{
+        left: 0;
     }
     .linkForArticle {
         padding-left: 650px;
@@ -265,15 +222,14 @@ footer > p {
 }
 
 @media screen and (max-width: 767px) {
-    .wrapper {
-        width: 530px;
-    }
+    
     .linkForArticle {
         padding-left: 430px;
     }
 }
 
 @media screen and (max-width: 565px) {
+    
     .wrapper {
         width: 100%;
     }
