--- a/things-for-site/adaptiv-menu/style.css
+++ b/things-for-site/adaptiv-menu/style.css
@@ -8,6 +8,8 @@ body {
     font-family: montserrat;
 }
 nav {
+    position: sticky;
+    top: 0;
     height: 80px;
     width: 100%;
     background: #34495e;
@@ -70,7 +72,7 @@ nav #icon{
         width: 100%;
         height: 100vh;
         background: #2f3640;
-        top: 80px;
+        top: 70px;
         left: -100%;
         text-align: center;
         transition: all .5s;
