--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -828,7 +828,7 @@
 }
 .product-one__link{
         a{
-        padding: 16px 8px;
+        padding: 14px 8px;
         width: 150px;
         color: $grey;
         font-size: 16px;
@@ -849,10 +849,132 @@
     background-color: $green;
 }
 .product-one__social{
+    a{
+        width: 54px;
+        height: 50px;
+        position: relative;
+        & + a {
+            margin-right: 3px;
+        }
+        &::before{
+            font-size: 18px;
+            color: #fff;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+
+}
+.icon-facebook{
+    background-color: #6370b6 ;    
+}
+.icon-twitter{
+    background-color: #64b5f6 ;
+}
+.icon-linkedin{
+    background-color: #4f71ce ;
+}
+.icon-pinterest-p{
+    background-color: #d32f2f ;
+}
+.product-one__more-title{
+    font-size: 18px;
+    color: $bg;
+    @include f500;
+    padding: 18px 25px;
+    background-color: #fff;
+    border: 1px solid #dcdcdc;
+    margin-bottom: 28px;
+
 
 }
 
 
+
+
+
+
+.product-one__more-icons{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.productmini{
+    max-width: 270px;
+    width: 100%;
+    background-color: #fff;
+    margin-bottom: 27px;
+    align-items: center;
+    display: flex;
+    box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+}
+.productmini__images{
+    height: 90px;
+    width: 100px;
+    margin-right: 20px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat
+}
+.productmini__name {
+    @include f500;
+    font-size: 14px;
+    color: $bg;
+}
+.productmini__theme {
+    color: $green;
+    font-size: 12px;
+}
+.productmini__price {
+    @include f700;
+    font-size: 18px;
+    color: $bg;
+}
+
+.tabs{
+    display: flex;
+    text-align: center;
+    border: 1px solid #d7d7d7;
+    .tab{
+        width: 100%;
+        background-color: #fff;
+        font-size: 16px;
+        color: #70838d;
+        padding: 20px 0;
+        cursor: pointer;
+        & + .tab {
+            border-left: 1px solid #d7d7d7;
+        }
+    }
+}
+.tab_content{
+    background-color: #fff;
+    border: 1px solid #d7d7d7;
+    border-top: none; 
+    padding: 30px 30px 50px;
+}
+.tab-item{
+    display: none;
+    &:first-child{
+        display: block;
+    }
+}
+.tab-items__list{
+    font-size: 16px;
+    line-height: 36px;
+    color: #707070;
+    column-count: 2;
+    column-gap: 25px;
+    li{
+        max-width: 270px;
+        width: 100%;
+    }
+}
+.product-one__more{
+    margin-top: 55px;
+}
 
 
 
