--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -781,6 +781,7 @@
 .product-one{
     padding-top: 50px;
     padding-bottom: 100px;
+    background-color: #f4f6f5;
 }
 .product-one__inner{
     display: flex;
@@ -975,6 +976,70 @@
 .product-one__more{
     margin-top: 55px;
 }
+.aside__item{
+    max-width: 270px;
+    width: 100%;
+    padding: 0px 30px 30px;
+    margin-bottom: 30px;
+    background-color:#fff;
+    .aside__title{
+        @include f700;
+        font-size: 20px;
+        line-height: 60px;
+        color: #263238;
+        border-bottom: 1px solid #dde3e8;
+    }
+}
+.price__product-box{
+    display: flex;
+    justify-content: space-between;
+    margin: 35px 0px;
+    .price__product{
+        @include f500;
+        font-size: 22px;
+        color: $red ;
+    }
+}
+.aside__item-btn{
+    width: 100%;
+    @include f500;
+    color: #fff;
+    font-size: 16px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: none;
+    text-align: center;
+    cursor: pointer;
+    & + & {
+        margin-top: 10px;
+    }
+}
+.aside__item-btn--green{
+    background-color: $green;
+    position: relative;
+    &::before{
+        font-family: 'Icomoon';
+        position: absolute;
+        top: 16px;
+        left: 35px;
+        font-size: 16px;
+    }
+}
+.aside__item-btn--blue{
+    background-color: #42a5f5;
+    position: relative;
+    &::before{
+        font-family: 'icomoon';
+        position: absolute;
+        top: 16px;
+        left: 25px;
+        font-size: 16px;
+    }
+}
+.aside__item-btn--grey{
+    background-color: #546e7a;
+}
+
 
 
 
