--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -1002,7 +1002,7 @@
 }
 .aside__item-btn{
     width: 100%;
-    @include f500;
+    font-family: 'Roboto', sans-serif !important;
     color: #fff;
     font-size: 16px;
     padding-top: 15px;
@@ -1010,17 +1010,17 @@
     border: none;
     text-align: center;
     cursor: pointer;
-    & + & {
-        margin-top: 10px;
-    }
+    margin-top: 7px;
+    box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+    
 }
 .aside__item-btn--green{
     background-color: $green;
     position: relative;
     &::before{
-        font-family: 'Icomoon';
+        font-family: 'icomoon';
         position: absolute;
-        top: 16px;
+        top: 14px;
         left: 35px;
         font-size: 16px;
     }
@@ -1031,13 +1031,99 @@
     &::before{
         font-family: 'icomoon';
         position: absolute;
-        top: 16px;
-        left: 25px;
+        top: 14px;
+        left: 20px;
         font-size: 16px;
     }
 }
 .aside__item-btn--grey{
-    background-color: #546e7a;
+    background-color: $text;
+}
+.product-author__box {
+    padding: 25px 0;
+    display: flex;
+}
+.author__avatar{
+    margin-right: 14px;
+}
+.author-info__name{
+    font-size: 18px;
+    color: $bg;
+    margin-bottom: 2px;
+}
+.author-info__link{
+    font-size: 13px;
+    color: #707070;
+    padding: 6px 9px 5px;
+    border: 1px solid #d6d6d6;
+}
+.author__awards-list{
+    li{
+        display: inline-block;
+        color: #fff;
+        font-size: 20px;
+        text-align: center;
+        padding-top: 6px;
+        & + li {
+            margin-left: 4px;
+        }
+    }
+}
+.icon-meh-o{
+    background-image: url(/images/awards/orange.png);
+    width: 34px;
+    height: 37px;
+}
+.icon-pagelines{
+    background-image: url(/images/awards/red.png);
+    width: 34px;
+    height: 37px;
+}
+.icon-flash{
+    background-image: url(/images/awards/blue.png);
+    width: 34px;
+    height: 37px;
+}
+.icon-foursquare{
+    background-image: url(/images/awards/green.png);
+    width: 34px;
+    height: 37px;
+}
+.icon-yen{
+    background-image: url(/images/awards/grey.png);
+    width: 34px;
+    height: 37px;
+}
+.aside__item-sales{
+    padding-top: 23px;
+    font-size: 16px;
+    @include f300;
+    color: #707070;
+    span{
+        font-size: 20px;
+        @include f700;
+        color: #263438;
+        padding-right: 10px;
+        &::before{
+            content: '\f07a';
+            font-family: 'icomoon';
+            font-size: 20px;
+            padding-right: 20px;
+            color: #a6b5bb;
+        }
+    }
+
+}
+.information__line{
+    font-size: 14px;
+    color: #70838d;
+    margin-top: 20px;
+    line-height: 18px;
+    span{
+        color: $bg;
+        @include f500;
+    }
+    
 }
 
 
