--- a/howTo/page/moderno/app/scss/_media.scss
+++ b/howTo/page/moderno/app/scss/_media.scss
@@ -1,3 +1,12 @@
+@media (max-width: 1200px){
+    .tutorial__inner{
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .tutorial__item{
+        margin-top: 15px;
+    }
+}
 @media (max-width: 1150px) {
     .footer__inner{
         flex-wrap: wrap;
@@ -8,6 +17,11 @@
     }
     .header__text{
         display: none;
+    }
+}
+@media (max-width: 970px) {
+    .products__inner-box{
+        justify-content: center;
     }
 }
 @media (max-width: 900px) {
@@ -63,6 +77,20 @@
         }
     }
 }
+@media (max-width: 670px){
+    .products_inner-btn button{
+        margin-bottom: 10px;
+    }
+    .advantages__inner{
+        flex-wrap: wrap;
+
+    }
+    .advantages__item{
+        width: 100%;
+        margin-bottom: 20px;
+        justify-content: center;
+    }
+}
 @media (max-width: 640px){
     .notification__box,
     .message__box{
@@ -71,7 +99,32 @@
     .circle__menu{
         right: auto;
     }
+    .title{
+        font-size: 24px;
+        line-height: 32px;
+    }
 }
+
+@media (max-width: 570px){
+    .search__inner-title{
+        font-size: 36px;
+        line-height: 48px;
+    }
+    .search__inner-text{
+        font-size: 18px;
+    }
+    .author__box{
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin-right: 0px;
+    }
+    .author__title{
+        margin-right: 0px;
+    }
+
+}
+
 @media (max-width: 540px){
     .footer__coll{
         min-width: 100%;
@@ -83,6 +136,7 @@
         }
      }
 }
+
 @media (max-width: 520px){
     .menu__list{
         top: 70px;
@@ -148,6 +202,7 @@
     .user__images{
         margin-right: 0;
     }
+    
 }
 @media(max-width: 390px){
     .header__box{
@@ -174,6 +229,14 @@
     }
     .circle__menu{
         left: -20px;
+    }
+    .search__inner-title {
+        font-size: 30px;
+        line-height: 36px;
+    }
+    .search__inner-text{
+        font-size: 14px;
+        line-height: 18px;
     }
 }
 
